// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab should render TopSort component with route, should changed className 1`] = `
<Fragment>
  <button
    className="titleText active"
    onClick={[MockFunction]}
    type="button"
  >
    mockChild
  </button>
</Fragment>
`;

exports[`Tab should render TopSort component without props, with fakeChild 1`] = `
<Fragment>
  <button
    className="titleText"
    onClick={[MockFunction]}
    type="button"
  >
    fakeMockChild
  </button>
</Fragment>
`;
